FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/FD_Package__c.object
<CustomObject>
    <description>FD</description>
    <fields>
        <fullName>FD_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FD_Package_Status__c</fullName>
        <label>Package Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FD_Package_Type__c</fullName>
        <label>Package Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Manager</fullName>
                    <default>true</default>
                    <label>User Manager</label>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FD_Project__c</fullName>
        <label>Project</label>
        <referenceTo>FD_Project__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FD_Test_Level__c</fullName>
        <label>Test Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Tests</fullName>
                    <default>true</default>
                    <label>No Tests</label>
                </value>
                <value>
                    <fullName>All Tests in Org</fullName>
                </value>
                <value>
                    <fullName>Local Tests</fullName>
                </value>
                <value>
                    <fullName>Specified Tests</fullName>
                </value>
                <value>
                    <fullName>Specified  and Package Tests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FD_Package_Type__c</columns>
        <columns>FD_Package_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>